#
#   $Id$
#
#   This is a log of major user-visible changes in each release
#

(unreleased)

    - Add global methods lpush, lpop, lshift, and lunshift. Works similar to
      lappend (in fact lpush is just lappend) and do what they sound like.
      Also add ldindex. Works like lindex, but deletes the element from the list.
      Documented in portfile.7 (eridius r26034).
    
    - Add global methods try and throw. Implemented based on the specification
      in TIP #89. Documented in portfile.7 (eridius r26034).

    - Handle encodings properly now. All Portfiles and .conf files are assumed
      to be utf-8, and reading them or calling portindex(1) should now work
      the same on all locales (ticket #11978, eridius r25975).

    - Add support for decoding of obscured maintainer addresses.
      We support two types of obscured addresses in Portfile maintainers field:
         (1) username ==> implies username@macports.org
         (2) subdomain.tld:username ==> implies username@subdomain.tld
      These are unobscured by port info, and by port submit during the submission process,
      but are left obscured in the Portfile to avoid accidental disclosure.
      (jberry r25795).

    - Bugfix startup item generation so that launchd.plists are disabled
      by default, as we claim they are in our documentation. (jberry r25785).

    - Update adduser/addgroup to use dscl instead of niutil. Also add support
      for realname key in addgroup (ticket #11012, eridius r25586).

    - Make a correction to port(1)'s determination of whether or not a port has
      been updated by making it compare ${version} and then ${revision} rather
      than a single comparison of the compound ${version}_${revision}; the
      latter reports 2.01_2 to be newer than 2.01.01a25_0 because, at the fifth
      character, `_' comes after `.' in ASCII lexicographic order.
      (boeyms in r25310)

Release 1.4.42 (17-May-2007 tagged at r25296 by jberry)
