@@ -6,6 +6,10 @@
 
 (unreleased)
 
+    - Fix port variants calculation to properly account for negated variants and
+      to detect problems between required and negated variants
+      (ticket #11920, eridius r26036, patch by gwhitney).
+
     - Add global methods lpush, lpop, lshift, and lunshift. Works similar to
       lappend (in fact lpush is just lappend) and do what they sound like.
       Also add ldindex. Works like lindex, but deletes the element from the list.
